# fastapi-gino-arq-uvicorn

./: .dist.env  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.worker  LICENSE  Pipfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
app/: application.py  main.py  worker.py
app/models/orm/: base.py  user.py
app/models/orm/migrations/: env.py  script.py.mako
app/models/pydantic/: base.py  database.py  user.py
app/routes/: users.py
app/settings/: arq.py  globals.py  prestart.sh
app/tasks/: messaging.py
